--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "orbit-ways",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "Ghassen Bargougui",
+  "homepage": "https://ghassen.io/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --port 80 --proxy-config proxy.config.json",
