--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
     "tslib": "^2.3.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
@@ -50,6 +51,7 @@
     "@ionic/angular-toolkit": "^12.0.0",
     "@types/jasmine": "~5.1.0",
     "@types/sockjs-client": "^1.5.4",
+    "@types/uuid": "^8.3.2",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
     "eslint": "^9.16.0",
@@ -62,8 +64,7 @@
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.6.3"
+    "karma-jasmine-html-reporter": "~2.1.0"
   },
   "description": "An Ionic project"
 }
