--- a/proxy.config.json
+++ b/proxy.config.json
@@ -1,6 +1,6 @@
 {
   "/orbitways/api/": {
-    "target": "http://192.168.178.125:8080/",
+    "target": "http://localhost:8080/",
     "secure": false,
     "ws": true,
     "pathRewrite": {
@@ -8,7 +8,7 @@
     }
   },
   "/orbitways/orbitways-websocket/": {
-    "target": "http://192.168.178.125:8080/",
+    "target": "http://localhost:8080/",
     "secure": false,
     "ws": true,
     "pathRewrite": {
