--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic/angular": "^8.0.0",
     "@stomp/stompjs": "^7.0.0",
     "ionicons": "^7.0.0",
+    "js-confetti": "^0.12.0",
     "orbit-ways": "file:",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
